test/error/multi_line_comment_0.result
Error: unterminated multi-line comment
  --> test/error/multi_line_comment_0.colgm:2:32
  | 
2 | func main() -> i32 { return 0; }
  |                                ^